--- a/css/style.scss
+++ b/css/style.scss
@@ -35,31 +35,6 @@ p {
   margin-right: auto;
   margin-left: auto;
 }
-
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -75,23 +50,6 @@ p {
   padding-left: 15px;
 }
 
-.col-2 {
-  flex: 0 0 16.666667%;
-  max-width: 16.666667%;
-}
-.col-3 {
-  flex: 0 0 25%;
-  max-width: 25%;
-}
-.col-4 {
-  flex: 0 0 33.333333%;
-  max-width: 33.333333%;
-}
-.col-6 { 
-  flex: 0 0 50%;
-  max-width: 50%;
-}
-
 .text-center { text-align: center; }
 .text-left { text-align: left; }
 .img-responsive {
@@ -104,11 +62,11 @@ p {
 }
 
 .section {
-  margin-bottom: 100px;
+  margin-bottom: 60px;
 }
 .section__title {
-  font: bold 36px 'Baloo 2', cursive;
-  line-height: 43px;
+  font: bold 22px 'Baloo 2', cursive;
+  line-height: 28px;
   margin-bottom: 20px;
   color: $color-dark;
 }
@@ -116,14 +74,14 @@ p {
 /* section main banner */
 .main__banner {
   background-color:  #FF8B42;
-  padding: 160px 0;
+  padding: 40px 0;
   color: $color-white;
 
   .section__title, 
   p { color: $color-white; }
 
   .section__ctas {
-    margin-top: 50px;
+    margin: 20px 0;
   }
   .cta__white,
   .cta__link-white {
@@ -155,15 +113,21 @@ p {
   padding-bottom: 30px;
 
   p { color: $color-white;}
+}
+.lista__item {
+  margin-bottom: 20px;
+}
 
-  .lista__title {
-    margin: 10px 0;
-  }
+.lista__icon, .lista__title { display: inline-block;}
+.lista__title { margin: 0 0 0 10px;}
+
+.lista__description {
+  display: block;
 }
 
 /* section como funciona */
 .tab__item {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   &.active {
     .tab__link {
       border-color: $color-secondary;
@@ -191,13 +155,22 @@ p {
   text-decoration: none;
 }
 .tab__title {
-  margin: 30px 0 15px;
+  margin: 10px 0 15px;
   font-size: 22px;
   color: $color-dark;
 }
+
+.tab__content {
+  display: none;
+  &.active {
+    display: block;
+  }
+}
+
 .screen-wrapper {
   display: flex;
   justify-content: center;
+  margin-top: 50px;
   
   &::before {
     content: '';
@@ -205,32 +178,47 @@ p {
     transform: rotate(-180deg);
     border-radius: 100%;
     display: block;
-    width: 490px;
-    height: 490px;
+    width: calc(100vw - 30px);
+    height: calc(100vw - 30px);
   }
 
-  img {
-    position: absolute;
-    top: -50px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
 }
+.tab__thumb {
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: none;
+
+  &.active { display: block;}
+}
+
+/* section produtos personalizados */
+.verticaly-centered { align-items: center; }
 
 /* section pet lua */
 .section--mascote {
   .section__title { text-align: center;}
 }
+.galeria { 
+  flex-wrap: initial;
+  overflow-x: auto;
+  padding-bottom: 20px;
+}
+.galeria__item {
+  width: 270px;
+  flex-shrink: 0;
+}
 .galeria__frame {
   background-color: #F0F0F0;
-  border: 20px solid #F0F0F0;
+  border: 12px solid #F0F0F0;
   box-shadow: 0px 7px 5px 1px rgba(89, 89, 89, 0.36);
 }
 .galeria__title {
   font-size: 16px;
-  margin-top: 20px;
+  margin-top: 10px;
   text-align: center;
-  height: 40px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -239,13 +227,19 @@ p {
 /* section coleção */
 .colecao {
   display: flex;
+  overflow-x: auto;
+  margin: 0 -15px;
 }
 .colecao__item {
   width: 150px;
-  margin-right: 50px;
+  margin-right: 15px;
+  padding-bottom: 20px;
 
+  &:first-child {
+    margin-left: 15px;
+  }
   &:last-child {
-    margin-right: 0;
+    margin-right: 15px;
   }
 }
 
@@ -275,15 +269,20 @@ p {
 /* section prateleira */
 .prateleira {
   display: flex;
+  overflow-x: auto;
+  margin: 0 -15px;
 }
 .prateleira__item {
+  flex-shrink: 0;
   width: 270px;
   border-radius: 8px;
   border: 1px solid $color-neutral;
-  margin-right: 30px;
+  margin-right: 15px;
+  margin-bottom: 20px;
   position: relative;
   overflow: hidden;
-  &:last-child { margin-right: 0; }
+  &:first-child { margin-left: 15px; }
+  &:last-child { margin-right: 15px; }
   &:hover {
     border: 1px solid $color-secondary;
     box-shadow: 0px 7px 20px 1px rgba(0, 91, 98, 0.25);
@@ -327,10 +326,14 @@ p {
 }
 
 /* seção o que dizem nossos clientes */
+#clientes {
+  text-align: center;
+}
 .estatistica__quantidade {
+  display: inline-block;
+  margin-right: 5px;
+  font-size: 22px;
   color: $color-primary;
-  display: block;
-  font-size: 34px;
   font-weight: bold;
   margin-bottom: 10px;
 }
@@ -342,16 +345,20 @@ p {
 
 .cards {
   display: flex;
-  margin: 50px 0 0 30px;
+  margin: 20px -15px 0;
   overflow-x: auto;
+  padding-bottom: 20px;
 }
 .card__item {
   width: 270px;
   height: 360px;
   flex-shrink: 0;
   border-radius: 8px;
-  margin-right: 30px;
+  margin-right: 15px;
   overflow: hidden;
+
+  &:first-child { margin-left: 15px; }
+  &:last-child { margin-right: 15px; }
 
   &--blue {
     background: #E9FCFE;
@@ -373,6 +380,8 @@ p {
 }
 
 table {
+  overflow-x: auto;
+  display: block;
   background-color: $color-white;
   width: 100%;
   box-shadow: 0px 7px 20px 1px rgba(89, 89, 89, 0.25);
@@ -383,7 +392,7 @@ table {
   .item-destaque {
     background-color: $color-primary;
     color: $color-white;
-    padding: 10px 0;
+    padding: 15px;
     width: 140px;
     svg {
       margin: 0 auto;
@@ -399,7 +408,7 @@ table {
   tr:nth-child(even) {
     background-color: #F2F4F8;
   }
-  th { padding: 0;}
+  th { padding: 15px;}
   td {
     text-align: center;
   }
@@ -416,7 +425,6 @@ table {
 .faq {
   border: 1px solid #DEDEDE;
   border-radius: 6px;
-  max-width: 70%;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -428,7 +436,8 @@ table {
   font-size: 18px;
   line-height: 22px;
   cursor: pointer;
-  padding: 18px;
+  padding: 18px 40px 18px 18px;
+  position: relative;
   width: 100%;
   text-align: left;
   outline: none;
@@ -447,13 +456,16 @@ table {
 }
 .accordion:after {
   content: '+'; /* Unicode character for "plus" sign (+) */
-  font-size: 18px;
+  font-size: 24px;
   color: #777;
   float: right;
   margin-left: 5px;
+  position: absolute;
+  right: 15px;
+  top: 19px;
 }
 
-.active:after {
+.accordion.active:after {
   content: "-"; /* Unicode character for "minus" sign (-) */
 }
 .panel {
@@ -463,4 +475,171 @@ table {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+  .col-2 {
+    flex: 0 0 16.666667%;
+    max-width: 16.666667%;
+  }
+  .col-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .col-4 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+  .col-6 { 
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+
+  .section {
+    margin-bottom: 100px;
+  }
+  .section__title {
+    font-size: 36px;
+    line-height: 43px;
+  }
+
+  .main__banner {
+    padding: 160px 0; 
+    .section__ctas { margin: 50px 0 0;}
+  }
+
+  .section--vantagens {
+    .lista__title {
+      margin: 10px 0;
+    }
+  }
+
+  .lista__item {
+    margin-bottom: 0;
+  }
+  .lista__icon, .lista__title {
+    display: block;
+  }
+
+  .screen-wrapper {
+    margin-top: 0;
+    &::before {
+      width: 490px;
+      height: 490px;
+    }
+  }  
+  .tab__item { margin-bottom: 20px; }
+  .tab__title { margin: 30px 0 15px; }
+  .tab__thumb {
+    top: -50px;
+  }
+
+  .order-1 { order: 1}
+  .order-2 { order: 2}
+
+  .galeria__title{
+    margin-top: 20px;
+    height: 40px;
+   }
+   .galeria__frame {
+    border: 20px solid #F0F0F0; 
+  }
+
+  .colecao {
+    margin: 0;
+    overflow-x: hidden;
+    justify-content: space-between;
+  }
+  .colecao__item {
+    margin-right: 0;
+    padding-bottom: 0;
+    &:first-child { margin-left: 0 }
+    &:last-child { margin-right: 0;}
+  }
+
+  .prateleira {
+    margin: 0;
+    overflow-x: unset;
+  }
+  .prateleira__item {
+    flex-shrink: unset;
+    margin-bottom: 0;
+    margin-right: 30px;
+    &:first-child { margin-left: 0; }
+    &:last-child { margin-right: 0; }
+  }
+
+  #clientes {
+    text-align: left;
+  }
+  .estatistica__quantidade {
+    display: block;
+    margin-right: 0;
+    font-size: 34px;
+  }
+  .cards {
+    margin: 50px 0 0 0;
+    padding-bottom: 0;
+  }
+  .cards::-webkit-scrollbar-track {
+    background-color: $color-neutral;
+    border-radius: 10px;
+  }
+  .cards::-webkit-scrollbar {
+    height: 8px;
+    background-color: #F5F5F5;
+  }
+  .cards::-webkit-scrollbar-thumb {
+    background-color: $color-primary;
+    border-radius: 10px;
+  }
+
+  .card__item {
+    margin-right: 30px;
+    margin-bottom: 20px;
+
+    &:first-child {
+      margin-left: 0;
+    }
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  table {
+    display: table;
+    overflow-x: unset;
+    .item-destaque {
+      padding: 10px 0;
+    }
+  }
+
+  table th {
+    padding: 0;
+  }
+
+  .faq {
+    max-width: 70%;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
 }
